--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <div class="d-flex justify-content-end">
             <button
               type="button"
+              id="closer-modal"
               class="btn btn-close text-end"
               aria-label="Close"
               data-bs-dismiss="modal"
